eclipse-workspace/Surya Dev Org/src/objects/LoginHistoryCopy__c.object
<CustomObject>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginTime__c</fullName>
        <label>LoginTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoginUrl__c</fullName>
        <label>LoginUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>LoginHistoryCopy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LoginHistoryCopy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoginHistoryCopy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>